@@ -7,30 +7,28 @@ import au.com.dius.pact.consumer.dsl.DslPart;
 import au.com.dius.pact.consumer.dsl.PactDslWithProvider;
 import au.com.dius.pact.consumer.junit5.PactConsumerTestExt;
 import au.com.dius.pact.consumer.junit5.PactTestFor;
-import au.com.dius.pact.core.model.RequestResponsePact;
+import au.com.dius.pact.core.model.V4Pact;
 import au.com.dius.pact.core.model.annotations.Pact;
 import au.com.dius.pact.core.model.annotations.PactFolder;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import org.apache.http.HttpStatus;
+import org.apache.hc.core5.http.HttpStatus;
 import org.json.JSONException;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.model.refdata.CourtLocationCategory;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.refdata.LocationRefDataApi;
 
-@ExtendWith(SpringExtension.class)
 @ExtendWith(PactConsumerTestExt.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @PactFolder("pacts")
 @TestPropertySource(locations = {"classpath:application.properties"}, properties = {"location.ref.data.url=http://localhost:8991"})
 @PactTestFor(providerName = "referenceData_court_venues", port = "8991")
-@ContextConfiguration(classes = {RefDataConsumerApplication.class})
+@SpringJUnitConfig(classes = {RefDataConsumerApplication.class})
 public class LocationRefDataConsumerTest {
 
     static final String AUTHORIZATION_HEADER = "Authorization";
@@ -45,7 +43,7 @@ public class LocationRefDataConsumerTest {
     LocationRefDataApi locationRefDataApi;
 
     @Pact(provider = "referenceData_court_venues", consumer = "ia_caseApi")
-    public RequestResponsePact generatePactFragment(PactDslWithProvider builder) throws JSONException, JsonProcessingException {
+    public V4Pact generatePactFragment(PactDslWithProvider builder) throws JSONException, JsonProcessingException {
 
         return builder
             .given("Service ID")
@@ -57,7 +55,7 @@ public class LocationRefDataConsumerTest {
             .willRespondWith()
             .body(buildLocationResponsePactDsl())
             .status(HttpStatus.SC_OK)
-            .toPact();
+            .toPact(V4Pact.class);
     }
 
     @Test
@@ -71,8 +69,8 @@ public class LocationRefDataConsumerTest {
         assertEquals("serviceCode", courtLocationCategory.getServiceCode());
         assertEquals("courtTypeId", courtLocationCategory.getCourtTypeId());
         assertEquals("courtType", courtLocationCategory.getCourtType());
-        assertEquals("siteName", courtLocationCategory.getCourtVenues().get(0).getSiteName());
-        assertEquals("epimmsId", courtLocationCategory.getCourtVenues().get(0).getEpimmsId());
+        assertEquals("siteName", courtLocationCategory.getCourtVenues().getFirst().getSiteName());
+        assertEquals("epimmsId", courtLocationCategory.getCourtVenues().getFirst().getEpimmsId());
     }
 
     private DslPart buildLocationResponsePactDsl() {
