@@ -175,7 +175,7 @@ public final class InterpreterLanguagesUtils {
                 refDataUserService.mapCategoryValuesToDynamicListValues(languages));
 
         } catch (Exception e) {
-            throw new RuntimeException(String.format("Could not read response by RefData service for %s(s)", languageCategory), e);
+            throw new RuntimeException("Could not read response by RefData service for %s(s)".formatted(languageCategory), e);
         }
 
         return new InterpreterLanguageRefData(
