@@ -228,7 +228,7 @@ class AddAppealResponseHandlerTest {
         List<IdValue<DocumentWithMetadata>> respondentDocuments =
             respondentDocumentsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, respondentDocuments.size());
 
