@@ -69,8 +69,8 @@ class DocumentsAppenderTest {
         assertNotNull(allDocuments);
         assertEquals(4, allDocuments.size());
 
-        assertEquals("4", allDocuments.get(0).getId());
-        assertEquals(newDocument1, allDocuments.get(0).getValue());
+        assertEquals("4", allDocuments.getFirst().getId());
+        assertEquals(newDocument1, allDocuments.getFirst().getValue());
 
         assertEquals("3", allDocuments.get(1).getId());
         assertEquals(newDocument2, allDocuments.get(1).getValue());
@@ -109,8 +109,8 @@ class DocumentsAppenderTest {
         assertNotNull(allDocuments);
         assertEquals(4, allDocuments.size());
 
-        assertEquals("4", allDocuments.get(0).getId());
-        assertEquals(existingDocument1, allDocuments.get(0).getValue());
+        assertEquals("4", allDocuments.getFirst().getId());
+        assertEquals(existingDocument1, allDocuments.getFirst().getValue());
 
         assertEquals("3", allDocuments.get(1).getId());
         assertEquals(existingDocument2, allDocuments.get(1).getValue());
@@ -156,8 +156,8 @@ class DocumentsAppenderTest {
         assertNotNull(allDocuments);
         assertEquals(3, allDocuments.size());
 
-        assertEquals("3", allDocuments.get(0).getId());
-        assertEquals(newDocument1, allDocuments.get(0).getValue());
+        assertEquals("3", allDocuments.getFirst().getId());
+        assertEquals(newDocument1, allDocuments.getFirst().getValue());
 
         assertEquals("2", allDocuments.get(1).getId());
         assertEquals(newDocument2, allDocuments.get(1).getValue());
@@ -186,8 +186,8 @@ class DocumentsAppenderTest {
         assertNotNull(allDocuments);
         assertEquals(2, allDocuments.size());
 
-        assertEquals("2", allDocuments.get(0).getId());
-        assertEquals(existingDocument1, allDocuments.get(0).getValue());
+        assertEquals("2", allDocuments.getFirst().getId());
+        assertEquals(existingDocument1, allDocuments.getFirst().getValue());
 
         assertEquals("1", allDocuments.get(1).getId());
         assertEquals(existingDocument2, allDocuments.get(1).getValue());
@@ -210,8 +210,8 @@ class DocumentsAppenderTest {
         assertNotNull(allDocuments);
         assertEquals(2, allDocuments.size());
 
-        assertEquals("2", allDocuments.get(0).getId());
-        assertEquals(newDocument1, allDocuments.get(0).getValue());
+        assertEquals("2", allDocuments.getFirst().getId());
+        assertEquals(newDocument1, allDocuments.getFirst().getValue());
 
         assertEquals("1", allDocuments.get(1).getId());
         assertEquals(newDocument2, allDocuments.get(1).getValue());
