@@ -1,35 +1,23 @@
 package uk.gov.hmcts.reform.iacaseapi.infrastructure.controllers;
 
-import static java.util.Arrays.asList;
-import static org.assertj.core.api.Assertions.assertThat;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPEAL_GROUNDS_PROTECTION;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPEAL_REFERENCE_NUMBER;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPEAL_TYPE;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPELLANT_ADDRESS;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.CASE_ARGUMENT_DOCUMENT;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.HEARING_CENTRE;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.RESPONDENT_DOCUMENTS;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.RESPONDENT_EVIDENCE;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.SEND_DIRECTION_PARTIES;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.SUBMISSION_OUT_OF_TIME;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.HearingCentre.MANCHESTER;
-
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import java.io.IOException;
-import java.util.List;
-import java.util.Optional;
 import org.junit.jupiter.api.Test;
-import uk.gov.hmcts.reform.iacaseapi.domain.entities.AppealType;
-import uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCase;
-import uk.gov.hmcts.reform.iacaseapi.domain.entities.DocumentWithDescription;
-import uk.gov.hmcts.reform.iacaseapi.domain.entities.DocumentWithMetadata;
-import uk.gov.hmcts.reform.iacaseapi.domain.entities.HearingCentre;
-import uk.gov.hmcts.reform.iacaseapi.domain.entities.Parties;
+import uk.gov.hmcts.reform.iacaseapi.domain.entities.*;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.CheckValues;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.AddressUk;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.Document;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.IdValue;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.YesOrNo;
+
+import java.io.IOException;
+import java.util.List;
+import java.util.Optional;
+
+import static java.util.Arrays.asList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.*;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.HearingCentre.MANCHESTER;
 
 @SuppressWarnings("OperatorWrap")
 class AsylumCaseTest {
@@ -50,27 +38,29 @@ class AsylumCaseTest {
     @Test
     void reads_document_with_description() throws IOException {
 
-        String caseData = "{\n" +
-            "  \"respondentEvidence\": [\n" +
-            "    {\n" +
-            "      \"id\": \"d019091d-806c-49cf-af64-669fb3d21361\",\n" +
-            "      \"value\": {\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2\",\n" +
-            "          \"document_filename\": \"test.doc\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"desc\"\n" +
-            "      }\n" +
-            "    }\n" +
-            "  ]\n" +
-            "}";
+        String caseData = """
+            {
+              "respondentEvidence": [
+                {
+                  "id": "d019091d-806c-49cf-af64-669fb3d21361",
+                  "value": {
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2",
+                      "document_filename": "test.doc",
+                      "document_binary_url": "http://dm-store:8080/documents/7a45c5cb-7b8f-47e0-983b-815b613cdce2/binary"
+                    },
+                    "description": "desc"
+                  }
+                }
+              ]
+            }\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
         Optional<List<IdValue<DocumentWithDescription>>> maybeRespondentEvidence = asylumCase.read(RESPONDENT_EVIDENCE);
 
-        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().get(0);
+        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().getFirst();
 
         assertThat(documentWithDescriptionIdValue.getId())
             .isEqualTo("d019091d-806c-49cf-af64-669fb3d21361");
@@ -98,17 +88,19 @@ class AsylumCaseTest {
     @Test
     void reads_address_with_target_type_generics() throws IOException {
 
-        String caseData = "{\n" +
-            "  \"appellantAddress\": {\n" +
-            "    \"AddressLine1\": \"a1\",\n" +
-            "    \"AddressLine2\": \"a2\",\n" +
-            "    \"PostTown\": \"some-post-town\",\n" +
-            "    \"PostCode\": \"some-post-code\",\n" +
-            "    \"County\": \"some-county\",\n" +
-            "    \"AddressLine3\": \"a3\",\n" +
-            "    \"Country\": \"some-country\"\n" +
-            "  }\n" +
-            "}";
+        String caseData = """
+            {
+              "appellantAddress": {
+                "AddressLine1": "a1",
+                "AddressLine2": "a2",
+                "PostTown": "some-post-town",
+                "PostCode": "some-post-code",
+                "County": "some-county",
+                "AddressLine3": "a3",
+                "Country": "some-country"
+              }
+            }\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
@@ -170,47 +162,49 @@ class AsylumCaseTest {
     @Test
     void reads_id_value_list() throws IOException {
 
-        String caseData = "{\"respondentDocuments\": [\n" +
-            "    {\n" +
-            "      \"id\": \"3\",\n" +
-            "      \"value\": {\n" +
-            "        \"tag\": \"appealResponse\",\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1\",\n" +
-            "          \"document_filename\": \"AppealResponse.pdf\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"This is the appeal response\",\n" +
-            "        \"dateUploaded\": \"2019-05-16\"\n" +
-            "      }\n" +
-            "    },\n" +
-            "    {\n" +
-            "      \"id\": \"2\",\n" +
-            "      \"value\": {\n" +
-            "        \"tag\": \"appealResponse\",\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b\",\n" +
-            "          \"document_filename\": \"AppealResponseEvidence.pdf\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"This is the appeal response evidence\",\n" +
-            "        \"dateUploaded\": \"2019-05-16\"\n" +
-            "      }\n" +
-            "    },\n" +
-            "    {\n" +
-            "      \"id\": \"1\",\n" +
-            "      \"value\": {\n" +
-            "        \"tag\": \"respondentEvidence\",\n" +
-            "        \"document\": {\n" +
-            "          \"document_url\": \"http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75\",\n" +
-            "          \"document_filename\": \"RespondentEvidence.pdf\",\n" +
-            "          \"document_binary_url\": \"http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75/binary\"\n" +
-            "        },\n" +
-            "        \"description\": \"This is the respondent evidence\",\n" +
-            "        \"dateUploaded\": \"2019-05-16\"\n" +
-            "      }\n" +
-            "    }\n" +
-            "  ]}";
+        String caseData = """
+            {"respondentDocuments": [
+                {
+                  "id": "3",
+                  "value": {
+                    "tag": "appealResponse",
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1",
+                      "document_filename": "AppealResponse.pdf",
+                      "document_binary_url": "http://dm-store:8080/documents/c3792783-970b-4994-a361-78bd2ec843a1/binary"
+                    },
+                    "description": "This is the appeal response",
+                    "dateUploaded": "2019-05-16"
+                  }
+                },
+                {
+                  "id": "2",
+                  "value": {
+                    "tag": "appealResponse",
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b",
+                      "document_filename": "AppealResponseEvidence.pdf",
+                      "document_binary_url": "http://dm-store:8080/documents/ab3acaa1-0b6c-4d9b-843e-1d3d338d550b/binary"
+                    },
+                    "description": "This is the appeal response evidence",
+                    "dateUploaded": "2019-05-16"
+                  }
+                },
+                {
+                  "id": "1",
+                  "value": {
+                    "tag": "respondentEvidence",
+                    "document": {
+                      "document_url": "http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75",
+                      "document_filename": "RespondentEvidence.pdf",
+                      "document_binary_url": "http://dm-store:8080/documents/25546e97-d71e-4e85-8141-b954e9aadb75/binary"
+                    },
+                    "description": "This is the respondent evidence",
+                    "dateUploaded": "2019-05-16"
+                  }
+                }
+              ]}\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
@@ -218,8 +212,8 @@ class AsylumCaseTest {
 
         List<IdValue<DocumentWithMetadata>> idValues = maybeRespondentDocuments.get();
 
-        assertThat(idValues.get(0).getId()).isEqualTo("3");
-        assertThat(idValues.get(0).getValue()).isInstanceOf(DocumentWithMetadata.class);
+        assertThat(idValues.getFirst().getId()).isEqualTo("3");
+        assertThat(idValues.getFirst().getValue()).isInstanceOf(DocumentWithMetadata.class);
 
         assertThat(idValues.get(1).getId()).isEqualTo("2");
         assertThat(idValues.get(1).getValue()).isInstanceOf(DocumentWithMetadata.class);
@@ -231,11 +225,13 @@ class AsylumCaseTest {
     @Test
     void reads_document() throws IOException {
 
-        String caseData = "{\"caseArgumentDocument\": {\n" +
-            "    \"document_url\": \"http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00\",\n" +
-            "    \"document_filename\": \"CaseArgument.pdf\",\n" +
-            "    \"document_binary_url\": \"http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00/binary\"\n" +
-            "  }}";
+        String caseData = """
+            {"caseArgumentDocument": {
+                "document_url": "http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00",
+                "document_filename": "CaseArgument.pdf",
+                "document_binary_url": "http://dm-store:8080/documents/81e61012-52cd-44b3-9570-873c538ecc00/binary"
+              }}\
+            """;
 
         AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
 
@@ -289,7 +285,7 @@ class AsylumCaseTest {
 
         Optional<List<IdValue<DocumentWithDescription>>> maybeRespondentEvidence = asylumCase.read(RESPONDENT_EVIDENCE);
 
-        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().get(0);
+        IdValue<DocumentWithDescription> documentWithDescriptionIdValue = maybeRespondentEvidence.get().getFirst();
 
 
         assertThat(maybeRespondentEvidence.get().size())
@@ -315,5 +311,25 @@ class AsylumCaseTest {
         asylumCase.clear(APPEAL_REFERENCE_NUMBER);
 
         assertThat(asylumCase.read(APPEAL_REFERENCE_NUMBER, String.class)).isEmpty();
+    }
+
+    @Test
+    void writeIfEmpty_does_not_write_if_not_empty() throws JsonProcessingException {
+        String caseData = "{\"appealReferenceNumber\": \"PA/50222/2019\"}";
+        AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
+
+        asylumCase.writeIfEmpty(APPEAL_REFERENCE_NUMBER, "test");
+
+        assertThat(asylumCase.read(APPEAL_REFERENCE_NUMBER, String.class)).isEqualTo(Optional.of("PA/50222/2019"));
+    }
+
+    @Test
+    void writeIfEmpty_writes_if_empty() throws JsonProcessingException {
+        String caseData = "{}";
+        AsylumCase asylumCase = objectMapper.readValue(caseData, AsylumCase.class);
+
+        asylumCase.writeIfEmpty(APPEAL_REFERENCE_NUMBER, "test");
+
+        assertThat(asylumCase.read(APPEAL_REFERENCE_NUMBER, String.class)).isEqualTo(Optional.of("test"));
     }
 }
